changes in studytez home search

--- a/src/Components/Course/course.css
+++ b/src/Components/Course/course.css
@@ -70,3 +70,46 @@
     font-size: 13px;
   }
   
+
+  .search-words{
+    font-size: 25px;
+  }
+
+  .search-result-counts{
+    margin: 25px 10px ;
+  }
+
+  .search-result-counts span{ 
+    font-size: 20px;
+    margin: 0px 20px;
+    padding: 8px 15px;
+    background-color: white;
+    color: #C5113E;
+    border-radius: 20px;
+    font-weight: 600;
+    cursor: pointer;
+   }
+
+   .offcanvas{
+    z-index: 100000;
+    background-color: rgb(255, 255, 255);
+    width: 500px!important;
+    right: 0;
+   }
+
+   .filter-container {
+    background-color: #f8f9fa;
+    border-radius: 1rem;
+    max-width: 400px;
+    margin: auto;
+  }
+  
+  .filter-container .form-label {
+    margin-bottom: 0.5rem;
+  }
+  
+  .filter-container .form-select,
+  .filter-container .form-control {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
