--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -2,8 +2,7 @@
 
 .home-container{
     height: auto;
-    background-color:#dd0e3a ;
-    overflow: hidden;
+    background-color:#ffffff ;
     /* background-image: url('../../Images/home/einstrobg.png'); */
     background-size: cover;
     /* background-repeat: no-repeat; */
@@ -30,7 +29,7 @@
   background-size: var(--s) calc(var(--s) * 0.577); */
    
     /* Add your background pattern here */
-    background-color: #e5e5f7;
+    /* background-color: #e5e5f7;
   opacity: 1;
   width: 100%;
   background-image: repeating-radial-gradient(
@@ -38,7 +37,7 @@
       transparent 0,
       #e5e5f7 30px
     ),
-    repeating-linear-gradient(#fabfbf8a, #dd0e3a);
+    repeating-linear-gradient(#fabfbf8a, #dd0e3a); */
 
 }
 
@@ -52,8 +51,12 @@
 
 .home-main-content{
     font-size: 5rem;
-    color: rgb(221, 14, 58,0.8);
-    text-shadow: -5px 4px 3px rgba(0, 0, 0, 1);
+    color: rgba(0, 0, 0, 0.8);
+    text-shadow: -5px 4px 3px rgb(0, 0, 0,0.5);
+}
+
+.home-main-content span{
+  color: #dd0e3a;
 }
 
 .home-journey-btn{
@@ -69,9 +72,36 @@
 }
 
 .home-first-img img{
-    width: 80%;
+    width: 100%;
     height:auto;
     margin-top: 100px;
+}
+.input-wrapper {
+  position: relative;
+  background: linear-gradient(135deg, #f77c91, #dd0e3a);
+  padding: 3.5px;
+  border-radius: 25px;
+  width: 70%;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
+
+.home-search-input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  border-radius: 20px; /* slightly less than wrapper for inner fit */
+  padding-left: 45px;
+  background-color: #fff; /* or match your site's background */
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  color: #dd0e3a;
+  pointer-events: none;
 }
 
 /* From Uiverse.io by cssbuttons-io */ 
@@ -161,4 +191,36 @@ button:hover .circle .icon.arrow {
 
 button:hover .button-text {
  color: #fff;
+}
+
+
+.search-result{
+  position: absolute;
+  top:50px;
+  background-color: white;
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  border: 1px solid red;
+  padding: 20px;
+  z-index: 10000;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.search-title{
+  cursor: pointer;
+  transform: all 0.3s ease-in-out;
+  font-weight: 600;
+}
+
+.search-head{
+  color: rgb(211, 211, 211);
+}
+
+.search-title:hover{
+  color: #dd0e3a;
+  transform: scale(1.1);
+  padding-left: 30px;
+  transform: all 0.3s ease-in-out;
 }
