--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,19 +1,19 @@
 .nav-bar-position{
     position: fixed;
     top: 0;
-    z-index: 10000;
+    z-index: 1000;
 }
 
 .navbar {
     background-color: #ffffff;
-    padding: 12px 24px;
+    padding: 0px 24px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-radius: 30px;
     margin: 10px 0px;
   }
-
+  
 .nav-red{
   background-color: #dd0e3a;
 }
@@ -41,6 +41,7 @@
   }
   
   .search-input {
+    position: relative;
     width: 100%;
     padding: 10px 16px;
     border-radius: 20px;
@@ -214,4 +215,38 @@ button {
   color: #C5113E;
   transform: scale(1.02);
   font-weight: 500;
+}
+
+
+
+
+.search-result{
+  position: absolute;
+  top:50px;
+  background-color: white;
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+  border: 1px solid red;
+  padding: 20px;
+  z-index: 10000;
+  overflow: auto;
+  overflow-x: hidden;
+}
+
+.search-title{
+  cursor: pointer;
+  transform: all 0.3s ease-in-out;
+  font-weight: 600;
+}
+
+.search-head{
+  color: rgb(211, 211, 211);
+}
+
+.search-title:hover{
+  color: #dd0e3a;
+  transform: scale(1.1);
+  padding-left: 30px;
+  transform: all 0.3s ease-in-out;
 }
